automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = cities['g']\n",
+    "city_keys = licities['greenville'].keys())\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
